[workspace]
resolver = "2"

members = [
  "glean-core",
  "glean-core/rlb",
  "glean-core/bundle",
  "glean-core/bundle-android",
  "glean-core/build",
  "samples/rust",
  "samples/rapid-metrics",
  "tools/embedded-uniffi-bindgen",
]

default-members = [
  "glean-core",
  "tools/embedded-uniffi-bindgen",
]

[profile.release]
opt-level = "s"
debug = false
lto = true

[profile.profiling]
opt-level = 3
inherits = "release"
debug = true

[profile.dev.package.miniz_oxide]
opt-level = 3

[profile.dev.package.flate2]
opt-level = 3
