[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "glean-sdk"
version = "66.1.2"
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
]
description = "Mozilla's Glean Telemetry SDK: The Machine that Goes 'Ping!'"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  {name = "The Glean Team", email = "glean-team@mozilla.com"}
]

dependencies = [
  "semver>=2.13.0",
  "glean_parser~=18.0",
]

[project.urls]
homepage = "https://mozilla.github.io/glean/"
repository = "https://github.com/mozilla/glean"
changelog = "https://mozilla.github.io/glean/book/appendix/changelog/sdk.html"

[tool.maturin]
python-source = "glean-core/python"
module-name = "glean._uniffi"
bindings = "uniffi"
manifest-path = "glean-core/bundle/Cargo.toml"
include = [{ path = "tools/embedded-uniffi-bindgen/**/*", format = "sdist" }]

[tool.coverage.run]
source = ["glean"]

[tool.ruff]
extend-exclude = ["glean-core/python/glean/_uniffi/glean.py"]
line-length = 100
