[package]
name = "glean-core"
version = "52.2.0"
authors = ["Jan-Erik Rediger <jrediger@mozilla.com>", "The Glean Team <glean-team@mozilla.com>"]
description = "A modern Telemetry library"
repository = "https://github.com/mozilla/glean"
readme = "README.md"
license = "MPL-2.0"
edition = "2021"
keywords = ["telemetry"]
include = [
  "/README.md",
  "/LICENSE",
  "/src",
  "/examples",
  "/tests",
  "/Cargo.toml",
  "/uniffi.toml",
  "/build.rs",
]
rust-version = "1.60"

[package.metadata.glean]
glean-parser = "7.0.0"

[badges]
circle-ci = { repository = "mozilla/glean", branch = "main" }
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
rkv = { version = "0.18.4", default-features = false, features = ["lmdb"] }
bincode = "1.2.1"
log = "0.4.8"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4.10", features = ["serde"] }
once_cell = "1.4.1"
flate2 = "1.0.19"
zeitstempel = "0.1.0"
crossbeam-channel = "0.5"
thiserror = "1.0.4"
uniffi = { version = "0.23.0", default-features = false }
time = "0.1.40"
remove_dir_all = "0.5.3"
env_logger = { version = "0.9.0", default-features = false, optional = true }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = { version = "0.11.0", default-features = false }

[target.'cfg(target_os = "ios")'.dependencies]
oslog = { version = "0.1.0", default-features = false, features = ["logger"] }

[dev-dependencies]
env_logger = { version = "0.9.0", default-features = false, features = ["termcolor", "atty", "humantime"] }
tempfile = "3.1.0"
iso8601 = "0.4"
ctor = "0.1.12"

[build-dependencies]
uniffi = { version = "0.23.0", default-features = false, features = ["build"] }

[features]
# Increases the preinit queue limit to 10^6
preinit_million_queue = []
# Enable `env_logger`. Only works on non-Android non-iOS targets.
enable_env_logger = ["env_logger"]
