[package]
name = "glean-core"
version = "66.0.0"
authors = ["Jan-Erik Rediger <jrediger@mozilla.com>", "The Glean Team <glean-team@mozilla.com>"]
description = "A modern Telemetry library"
repository = "https://github.com/mozilla/glean"
readme = "README.md"
license = "MPL-2.0"
edition = "2021"
keywords = ["telemetry"]
include = [
  "/README.md",
  "/LICENSE",
  "/src",
  "/examples",
  "/tests",
  "/Cargo.toml",
  "/uniffi.toml",
  "/build.rs",
]
rust-version = "1.82"

[package.metadata.glean]
glean-parser = "18.0.2"

[badges]
circle-ci = { repository = "mozilla/glean", branch = "main" }
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
rkv = { version = "0.20.0", default-features = false, features = ["malloc-size-of"]}
bincode = "1.2.1"
log = "0.4.8"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
once_cell = "1.18.0"
flate2 = "1.0.19"
zeitstempel = "0.2.0"
crossbeam-channel = "0.5"
thiserror = "2"
uniffi = { version = "0.29.3", default-features = false }
env_logger = { version = "0.10.0", default-features = false, optional = true }
malloc_size_of_derive = "0.1.3"
malloc_size_of = { version = "0.2.2", package = "wr_malloc_size_of", default-features = false, features = ["once_cell"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = { version = "0.12.0", default-features = false }

[target.'cfg(target_os = "ios")'.dependencies]
oslog = { version = "0.1.0", default-features = false, features = ["logger"] }

[dev-dependencies]
env_logger = { version = "0.10.0", default-features = false, features = ["humantime"] }
tempfile = "3.8.0"
iso8601 = "0.4"
ctor = "0.2.2"

[build-dependencies]
uniffi = { version = "0.29.3", default-features = false, features = ["build"] }

[features]
# Enable `env_logger`. Only works on non-Android non-iOS targets.
enable_env_logger = ["env_logger"]
# Enable gecko-specific APIs
gecko = []
