[package]
name = "benchmark"
version = "0.1.0"
authors = ["Jan-Erik Rediger <jrediger@mozilla.com>"]
description = "Benchmark the glean-core crate"
readme = "README.md"
license = "MPL-2.0"
edition = "2018"
publish = false

[lib]
bench = false

[dependencies]
# No version specified, this crate never gets published
glean-core = { path = ".." }

[dev-dependencies]
tempfile = "3.1.0"
criterion = "0.3"

[[bench]]
name = "bench_basic"
harness = false
