[package]
name = "glean-bundle"
# No need to ever change this version
version = "1.0.0"
authors = ["The Glean Team <glean-team@mozilla.com>"]
edition = "2021"
description = "Static/Dynamic library build of glean-ffi, for use in mobile builds"
repository = "https://github.com/mozilla/glean"
license = "MPL-2.0"

# This crate is never published to crates.io
publish = false

# We use the same name as glean-ffi.
# The Kotlin/Swift/Python bindings will use this name.
[lib]
name = "glean_ffi"
crate-type = ["staticlib", "cdylib"]

[dependencies.glean-core]
# No version specified, we build against what's available here.
path = ".."
