[package]
name = "glean-ffi"
version = "19.1.0"
authors = ["Jan-Erik Rediger <jrediger@mozilla.com>", "The Glean Team <glean-team@mozilla.com>"]
description = "FFI layer for Glean, a modern Telemetry library"
repository = "https://github.com/mozilla/glean"
readme = "README.md"
license = "MPL-2.0"
edition = "2018"

[lib]
name = "glean_ffi"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
lazy_static = "1.3.0"
ffi-support = "0.3.5"
log = "0.4.6"
uuid = { version = "0.8.1", features = ["v4"] }

[dependencies.glean-core]
path = ".."

[target.'cfg(target_os = "android")'.dependencies]
android_logger = { version = "0.8.5", default-features = false }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = { version = "0.7.1", default-features = false, features = ["termcolor", "atty", "humantime"] }
