[package]
name = "glean-ffi"
version = "27.1.0"
authors = ["Jan-Erik Rediger <jrediger@mozilla.com>", "The Glean Team <glean-team@mozilla.com>"]
description = "FFI layer for Glean, a modern Telemetry library"
repository = "https://github.com/mozilla/glean"
readme = "README.md"
license = "MPL-2.0"
edition = "2018"
keywords = ["telemetry"]
include = [
  "README.md",
  "LICENSE",
  "src/**/*",
  "tests/**/*",
  "Cargo.toml",
  "cbindgen.toml",
  "glean.h"
]

[badges]
circle-ci = { repository = "mozilla/glean", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]
name = "glean_ffi"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
ffi-support = "0.4.0"
log = "0.4.8"
uuid = { version = "0.8.1", features = ["v4"] }
once_cell = "1.2.0"

[dependencies.glean-core]
path = ".."
version = "27.1.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = { version = "0.8.6", default-features = false }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = { version = "0.7.1", default-features = false, features = ["termcolor", "atty", "humantime"] }
