[package]
name = "glean-ffi"
version = "34.1.0"
authors = ["Jan-Erik Rediger <jrediger@mozilla.com>", "The Glean Team <glean-team@mozilla.com>"]
description = "FFI layer for Glean, a modern Telemetry library"
repository = "https://github.com/mozilla/glean"
readme = "README.md"
license = "MPL-2.0"
edition = "2018"
keywords = ["telemetry"]
include = [
  "/README.md",
  "/LICENSE",
  "/src",
  "/tests",
  "/Cargo.toml",
  "/cbindgen.toml",
  "/glean.h"
]

[badges]
circle-ci = { repository = "mozilla/glean", branch = "main" }
maintenance = { status = "actively-developed" }

[lib]
name = "glean_ffi"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
ffi-support = "0.4.0"
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
uuid = { version = "0.8.1", features = ["v4"] }
once_cell = "1.2.0"

[dependencies.glean-core]
path = ".."
version = "34.1.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = { version = "0.9.0", default-features = false }

[target.'cfg(target_os = "ios")'.dependencies]
oslog = { version = "0.0.3", default-features = false, features = ["logger"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = { version = "0.7.1", default-features = false, features = ["termcolor", "atty", "humantime"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.82"
