[package]
name = "glean-preview"
version = "0.0.5"
authors = ["Jan-Erik Rediger <jrediger@mozilla.com>", "The Glean Team <glean-team@mozilla.com>"]
description = "Nice Glean SDK Rust API"
repository = "https://github.com/mozilla/glean"
readme = "README.md"
license = "MPL-2.0"
edition = "2018"
keywords = ["telemetry", "glean"]
include = [
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
  "/src",
  "/tests",
  "/Cargo.toml",
]

[badges]
circle-ci = { repository = "mozilla/glean", branch = "main" }
maintenance = { status = "actively-developed" }

[dependencies.glean-core]
path = ".."
version = "32.3.0"

[dependencies]
once_cell = "1.2.0"

[dev-dependencies]
env_logger = { version = "0.7.1", default-features = false, features = ["termcolor", "atty", "humantime"] }
tempfile = "3.1.0"
log = "0.4.8"
jsonschema-valid = "0.4.0"
serde_json = "1.0.44"
