[package]
name = "glean-tests"
version = "0.1.0"
edition = "2024"
publish = false
license = "MPL-2.0"

[dependencies]
glean = { path = "../rlb" }
env_logger = { version = "0.10.0", default-features = false, features = ["humantime"] }
flate2 = "1.0.19"
libc = "0.2"
log = "0.4.8"
once_cell = "1.18.0"
serde_json = "1.0.44"

[dev-dependencies]
assert_cmd = "2.1.2"
tempfile = "3.1.0"

[build-dependencies]
glean-build = { path = "../build" }
