[package]
name = "glean"
version = "52.2.0"
authors = ["Jan-Erik Rediger <jrediger@mozilla.com>", "The Glean Team <glean-team@mozilla.com>"]
description = "Glean SDK Rust language bindings"
repository = "https://github.com/mozilla/glean"
readme = "README.md"
license = "MPL-2.0"
edition = "2021"
keywords = ["telemetry", "glean"]
include = [
  "/README.md",
  "/LICENSE",
  "/src",
  "/tests",
  "/Cargo.toml",
]
rust-version = "1.60"

[badges]
circle-ci = { repository = "mozilla/glean", branch = "main" }
maintenance = { status = "actively-developed" }

[dependencies.glean-core]
path = ".."
version = "52.2.0"

[dependencies]
crossbeam-channel = "0.5"
inherent = "1"
log = "0.4.8"
once_cell = "1.2.0"
thiserror = "1.0.4"
serde_json = "1.0.44"
serde = { version = "1.0.104", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4.10", features = ["serde"] }
time = "0.1.40"
whatsys = "0.3.0"

[dev-dependencies]
env_logger = { version = "0.9.0", default-features = false, features = ["termcolor", "atty", "humantime"] }
tempfile = "3.1.0"
jsonschema-valid = "0.5.0"
flate2 = "1.0.19"

[features]
preinit_million_queue = ["glean-core/preinit_million_queue"]
