[package]
name = "glean"
version = "59.0.0"
authors = ["Jan-Erik Rediger <jrediger@mozilla.com>", "The Glean Team <glean-team@mozilla.com>"]
description = "Glean SDK Rust language bindings"
repository = "https://github.com/mozilla/glean"
readme = "README.md"
license = "MPL-2.0"
edition = "2021"
keywords = ["telemetry", "glean"]
include = [
  "/README.md",
  "/LICENSE",
  "/src",
  "/tests",
  "/Cargo.toml",
]
rust-version = "1.66"

[badges]
circle-ci = { repository = "mozilla/glean", branch = "main" }
maintenance = { status = "actively-developed" }

[dependencies.glean-core]
path = ".."
version = "59.0.0"

[dependencies]
inherent = "1"
log = "0.4.8"
once_cell = "1.18.0"
whatsys = "0.3.0"
# crates.io has 0.1.0, m-c has 0.0.2, this makes things highly confusing.
malloc_size_of = { version = "< 1", package = "wr_malloc_size_of" }

[dev-dependencies]
crossbeam-channel = "0.5"
env_logger = { version = "0.10.0", default-features = false, features = ["humantime"] }
flate2 = "1.0.19"
jsonschema-valid = "0.5.0"
libc = "0.2"
serde_json = "1.0.44"
tempfile = "3.1.0"

[features]
preinit_million_queue = ["glean-core/preinit_million_queue"]
