[package]
name = "sample"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[dependencies]
env_logger = { version = "0.10.0", default-features = false, features = ["auto-color", "humantime"] }
glean = { path = "../../glean-core/rlb" }
tempfile = "3.3.0"

[build-dependencies]
glean-build = { path = "../../glean-core/build" }
