[package]
name = "embedded-uniffi-bindgen"
version = "0.1.0"
authors = ["The Firefox Sync Developers <sync-team@mozilla.com>"]
edition = "2021"
license = "MPL-2.0"
publish = false

[dependencies]
anyhow = "1"
camino = "1.1.1"
uniffi = { version = "0.25.2", default-features = false, features = ["bindgen"] }
