[package]
name = "uniffi-bindgen"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
publish = false

[dependencies]
anyhow = "1"
camino = "1.1.1"
uniffi = { version = "0.31.0", default-features = false, features = ["bindgen", "cargo-metadata"] }
glob = "0.3.2"

[lib]
test = false
doctest = false
doc = false
