[package]
name = "services"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
publish = false

[dependencies]
env_logger = "0.11.10"
glean-sym = { path = "../../../glean-core/glean-sym" }
log = "0.4.29"

[build-dependencies]
glean-build = { path = "../../../glean-core/build" }

[lib]
name = "services"
path = "lib.rs"
crate-type = ["cdylib"]
