[package]
name = "xul"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
publish = false

[dependencies]
env_logger = "0.11.10"
flate2 = "1.1.9"
glean = { path = "../../../glean-core/rlb" }
log = "0.4.29"
serde_json = "1.0.149"

[build-dependencies]
glean-build = { path = "../../../glean-core/build" }

[lib]
name = "xul"
path = "lib.rs"
crate-type = ["cdylib"]
